INCLUDE_DIRECTORIES(../include/)

SET(PATH_SRC ${PATH_SRC}
  path.cpp
)

INCLUDE_DIRECTORIES (${C4_SOURCE_DIR}/include)
LINK_DIRECTORIES(${C4_BINARY_DIR})

ADD_LIBRARY(PATH ${PATH_SRC})
TARGET_LINK_LIBRARIES(PATH C4)

INSTALL(TARGETS PATH
        RUNTIME DESTINATION bin
        ARCHIVE DESTINATION lib
        LIBRARY DESTINATION lib
        )

