INCLUDE_DIRECTORIES(../include/)

SET(PATH_SRC ${PATH_SRC}
  pathDb.cpp
  graphElement.cpp
  vertex.cpp
  edge.cpp
)

INCLUDE_DIRECTORIES (${C4_SOURCE_DIR}/include)
LINK_DIRECTORIES(${C4_BINARY_DIR})

INCLUDE_DIRECTORIES (${ZETER_SOURCE_DIR}/include)
LINK_DIRECTORIES(${ZETER_BINARY_DIR})

ADD_LIBRARY(PATH ${PATH_SRC})
TARGET_LINK_LIBRARIES(PATH C4 ZETER)

INSTALL(TARGETS PATH
        RUNTIME DESTINATION bin
        ARCHIVE DESTINATION lib
        LIBRARY DESTINATION lib
        )

